feat(arena): escolher entre 3 oponentes com stats, estilo S&F (UX designer) [ARENA_ESCOLHA]
Ao entrar na Arena agora aparecem 3 OPONENTES (cards com retrato, nome/nivel/titulo,
barra de PODER colorida pela dificuldade vs voce, e os 6 atributos). Clicar no card =
duelo contra ele -> replay 3D (reusa request_battle). Faixa de status (custo/estamina,
lutas hoje x/limite) + botao ↻ Trocar (limite 3/visita). Design por agente UI/UX.

Backend:
- GET /api/arena/opponents -> 3 cards (do pool de rank, preenche com NPC se faltar
  gente) + yourPower. ArenaService.offerOpponents/powerOf/toInfo/npcInfo; power =
  atk*2+def*2+hp+dex+agi+luk (heuristica de exibicao, nao a luta).
- POST /api/arena/fight passa a aceptar {opponentId}; resolveChosenOpponent VALIDA
  que o id esta no pool de rank (anti-farm) -> senao cai no matchmaking. Recompensa
  segue plana (+25/-15). startFight(challenger) mantida (compat).

Front (Arena.gd): grid de 3 cards (UiKit.clickable_card/bar/kv), retrato = avatar de
classe; _fight(id)/_reroll/_blocked; cards desabilitados em KO/sem-estamina/limite.

5 avatares PixelLab: class_warrior/archer/merchant/recruit/mercenary(npc). i18n PT/EN.
658 testes, BUILD SUCCESS.

⚠️ reabrir o Godot p/ importar os 5 PNGs (ate la, fallback no icone 'character').

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>